# daily

./: README.md
cpp-idioms/: CMakeLists.txt  checkable_delete.cpp  deleter.cpp  deleter.hpp  main.cpp  object.hpp
isocpp/: CMakeLists.txt  CP1.cpp  NR2.cpp  NR5.cpp  main.cpp
shm/: CMakeLists.txt  main.cpp  test_consumer_producer.cpp  test_fork.cpp  test_pipe.cpp  test_pthread.cpp  test_shm.cpp
tls/: CMakeLists.txt  main.cpp
